examples/2_nic_lm/network.tf
# Create a Virtual Network within the Resource Group
resource "azurerm_virtual_network" "main" {
  name                = "${var.prefix}network${var.buildSuffix}"
  address_space       = ["${var.cidr}"]
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
}

# Create the Management Subnet within the Virtual Network
resource "azurerm_subnet" "mgmt" {
  name                 = "${var.prefix}mgmt${var.buildSuffix}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = azurerm_resource_group.main.name
  address_prefix       = var.subnets["subnet1"]
}

# Create the External Subnet within the Virtual Network
resource "azurerm_subnet" "External" {
  name                 = "${var.prefix}External${var.buildSuffix}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = azurerm_resource_group.main.name
  address_prefix       = var.subnets["subnet2"]
}

# Create the Internal Subnet within the Virtual Network
resource "azurerm_subnet" "Internal" {
  name                 = "${var.prefix}Internal${var.buildSuffix}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = azurerm_resource_group.main.name
  address_prefix       = var.subnets["subnet3"]
}
